--- a/assets/src/css/scss/main.scss
+++ b/assets/src/css/scss/main.scss
@@ -11,3 +11,6 @@
 @import "partials/siteMain";
 @import "partials/siteFooter";
 @import "partials/siteHeader";
+
+@import "templates/post";
+@import "templates/page";
