--- a/templates/page.twig
+++ b/templates/page.twig
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-	<h1 class="page-title">{{ post.title }}</h1>
-	<div class="">
+	<h1 class="page__title">{{ post.title }}</h1>
+	<div class="page__content">
 		{{post.content}}
 	</div>
 
