--- a/assets/src/css/scss/editor-styles.scss
+++ b/assets/src/css/scss/editor-styles.scss
@@ -1,12 +1,1 @@
-// Gutenberg Block Editor styles
-body #editor .wp-block {
-  max-width: 90% !important;
-  margin-left: auto !important;
-  margin-right: auto !important;
-
-  .alignfull {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
+// Gutenberg Block Editor styles - could be all done now in theme.json file? -> https://developer.wordpress.org/block-editor/how-to-guides/themes/theme-json/
