--- a/templates/single.twig
+++ b/templates/single.twig
@@ -2,12 +2,13 @@
 
 {% block content %}
 
-		<div class="{{ post.post_type }}" id="post-{{ post.ID }}">
+	<div class="{{ post.post_type }}">
 
-				<h1 class="page-title">{{ post.title }}</h1>
-
-				{{post.content}}
-
+		<h1 class="post__title">{{ post.title }}</h1>
+		<div class="post__content">
+			{{post.content}}
 		</div>
+
+	</div>
 
 {% endblock %}
