feat(*): update gutenberg files, index page, mixins

--- a/assets/src/css/scss/base/_variables.scss
+++ b/assets/src/css/scss/base/_variables.scss
@@ -54,6 +54,10 @@ $screen-xxxl: "(min-width: 150em)";
   --spacing-7xl: calc(var(--spacing-6xl) * var(--ratio));
 
 
+  --line-height-sm: 1.25;
+  --line-height-base: 1.5;
+
+
   --letter-spacing-sm: 0.02em;
   --letter-spacing-base: 0.04em;
 
