--- a/assets/src/css/scss/main.scss
+++ b/assets/src/css/scss/main.scss
@@ -12,5 +12,5 @@
 @import "partials/siteFooter";
 @import "partials/siteHeader";
 
-@import "templates/post";
+@import "templates/single";
 @import "templates/page";
