--- a/templates/partials/menu.twig
+++ b/templates/partials/menu.twig
@@ -1,13 +1,12 @@
 {% if menu %}
-	<ul>
 	{% for item in menu %}
-		<li class="{{ item.classes | join(' ') }}">
-			{% if item.current %}
-				<span class="">{{ item.title }}</span>
-			{% else %}
-				<a href="{{ item.link }}" class="">{{ item.title }}</a>
+		<li class="{{ item.classes | join(' ') }} {{menuItem}} {{item.children ? "menuList__itemHasChildren"}}">
+			<a href="{{ item.link }}" class="{{menuLink}} {{item.children ? "menuList__linkHasChildren"}}"  aria-haspopup="{{item.children ? "true" : "false"}}" aria-expanded="false">{{item.title}}</a>
+			{% if item.get_children %}
+			<ul class="menuList__listChildren" aria-label="Submenu {{item.title}}">
+			  {% include "partials/menu.twig" with {'menu': item.get_children} %}
+			</ul>
 			{% endif %}
 		</li>
 	{% endfor %}
-	</ul>
 {% endif %}
