--- a/assets/src/css/scss/base/_variables.scss
+++ b/assets/src/css/scss/base/_variables.scss
@@ -5,6 +5,8 @@ $screen-xs: "(min-width: 20em)";
 $screen-xs-sm: "(min-width: 30em)";
 /* ===== == = === 37.5em (600px) === = == ===== */
 $screen-sm: "(min-width: 37.5em)";
+/* ===== == = === 42.75em (684px) === = == ===== */
+$screen-sm-md: "(min-width: 42.75em )";
 /* ===== == = === 48em (768px) === = == ===== */
 $screen-md: "(min-width: 48em)";
 /* ===== == = === 56.25em (900px) === = == ===== */
@@ -22,11 +24,10 @@ $screen-xxl: "(min-width: 125em)";
 /* ===== == = === 125em (2400px) === = == ===== */
 $screen-xxxl: "(min-width: 150em)";
 
-
 :root {
   // colors
-  --white : #fff;
-  --black : #000;
+  --white: #fff;
+  --black: #000;
 
   // sizes
   --ratio: 1.25;
@@ -54,11 +55,9 @@ $screen-xxxl: "(min-width: 150em)";
   --spacing-lg-8: calc(var(--spacing-lg-7) * var(--ratio));
   --spacing-lg-9: calc(var(--spacing-lg-8) * var(--ratio));
 
-
   --line-height-sm: 1.1;
   --line-height-base: 1.4;
   --line-height-lg: 1.5;
-
 
   --letter-spacing-sm: 0.02em;
   --letter-spacing-base: 0.04em;
