feat(*): add xdebug file

--- a/assets/src/css/scss/base/_body.scss
+++ b/assets/src/css/scss/base/_body.scss
@@ -1,10 +1,13 @@
 .body {
+  ::selection {
+    color: var(--white);
+    background-color: var(--black);
+  }
 
   // sticky footer:
   height: 100%;
   display: flex;
   flex-direction: column;
-
 
   // breakpoint box
   // &:before {
@@ -19,9 +22,6 @@
   //   padding: .5em;
   // }
 }
-
-
-
 
 //breakpoint variables
 // @media #{$screen-xs} {
@@ -43,6 +43,14 @@
 // @media #{$screen-sm}  {
 //   :root {
 //     --bp: 'screen-sm';
+//     --bp-color: black;
+//     --bp-bg-color: white;
+//   }
+// }
+//
+// @media #{$screen-sm-md}  {
+//   :root {
+//     --bp: 'screen-sm-md';
 //     --bp-color: black;
 //     --bp-bg-color: white;
 //   }
