--- a/assets/src/css/scss/main.scss
+++ b/assets/src/css/scss/main.scss
@@ -1,4 +1,4 @@
-@import 'node_modules/css-reset-and-normalize/scss/reset-and-normalize';
+@import "node_modules/css-reset-and-normalize/scss/reset-and-normalize";
 
 @import "base/variables";
 @import "base/mixins";
@@ -7,6 +7,8 @@
 @import "base/typography";
 
 @import "accessibility/screen-reader-text";
+
+@import "utility/debug";
 
 @import "partials/siteMain";
 @import "partials/siteFooter";
