feat(*): update debug file and outsource breakpoint sign css

--- a/assets/src/css/scss/main.scss
+++ b/assets/src/css/scss/main.scss
@@ -9,6 +9,7 @@
 @import "accessibility/screen-reader-text";
 
 @import "utility/debug";
+@import "utility/breakpointSign";
 
 @import "partials/siteMain";
 @import "partials/siteFooter";
