feat(*): add image sizes, clean up functions file

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
  * Theme Name: ninastartertheme
- * Description: Starter Theme to use with Timber
+ * Description: Starter Theme to use with Timber 2.0
  * Author: Nina Regli
  * Version: 1.0
 */
