--- a/templates/html-head.twig
+++ b/templates/html-head.twig
@@ -13,3 +13,4 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <link rel="shortcut icon" href="{{ theme.link }}/favicon.png" />
     {{function('wp_head')}}
+</head>
