--- a/assets/src/css/scss/base/_html.scss
+++ b/assets/src/css/scss/base/_html.scss
@@ -1,3 +1,5 @@
+@use "base/variables" as *;
+
 html {
   height: 100%;
   box-sizing: border-box;
@@ -13,6 +15,8 @@ html {
   }
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
