--- a/templates/single.twig
+++ b/templates/single.twig
@@ -4,8 +4,8 @@
 
 	<div class="{{ post.post_type }}">
 
-		<h1 class="post__title">{{ post.title }}</h1>
-		<div class="post__content">
+		<h1 class="single__title">{{ post.title }}</h1>
+		<div class="single__content">
 			{{post.content}}
 		</div>
 
